--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
         });
 
         // --- Analysis Generation & UI (No changes needed here) ---
-        const apiKey = ""; 
+        const apiKey = "AIzaSyAau4gGyPWO4Dm3LVUQorkMs54VIZKckJ0"; 
         const modelName = "gemini-2.5-flash-preview-09-2025"; 
         const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/${modelName}:generateContent?key=${apiKey}`;
         window.razorpayKeyId = "YOUR_RAZORPAY_KEY_ID"; 
